@@ -31,7 +31,7 @@ public class OpenALUtils {
 				format = AL_FORMAT_MONO_DOUBLE_EXT;
 				break;
 			default:
-				throw new GdxRuntimeException("Sound: Bit depth must be 8, 16, 32 or 64.");
+				throw new GdxRuntimeException("Audio: Bit depth must be 8, 16, 32 or 64.");
 			}
 			break;
 		case 2: // Doesn't work on mono devices (#6631)
@@ -49,7 +49,7 @@ public class OpenALUtils {
 				format = AL_FORMAT_STEREO_DOUBLE_EXT;
 				break;
 			default:
-				throw new GdxRuntimeException("Sound: Bit depth must be 8, 16, 32 or 64.");
+				throw new GdxRuntimeException("Audio: Bit depth must be 8, 16, 32 or 64.");
 			}
 			break;
 		case 4:
@@ -65,7 +65,7 @@ public class OpenALUtils {
 			format = AL_FORMAT_71CHN16;
 			break;
 		default:
-			throw new GdxRuntimeException("Sound: Invalid number of channels. " + "Must be mono, stereo, quad, 5.1, 6.1 or 7.1.");
+			throw new GdxRuntimeException("Audio: Invalid number of channels. " + "Must be mono, stereo, quad, 5.1, 6.1 or 7.1.");
 		}
 		if (channels >= 4) {
 			if (bitDepth == 8)
@@ -73,7 +73,7 @@ public class OpenALUtils {
 			else if (bitDepth == 32)
 				format++; // Use 32-bit instead
 			else if (bitDepth != 16)
-				throw new GdxRuntimeException("Sound: Bit depth must be 8, 16 or 32 when 4+ channels are present.");
+				throw new GdxRuntimeException("Audio: Bit depth must be 8, 16 or 32 when 4+ channels are present.");
 		}
 		return format;
 	}
